--- a/index.html
+++ b/index.html
@@ -12,40 +12,10 @@
 <div id="to-do-list">
     <div id="msg"></div>
     <div id="to-do-add-wrapper">
-        <input type="text" id="to-do-input">
+        <input type="text" id="to-do-input" required>
         <button id="to-do-add"><i class="fa fa-plus"></i></button>
     </div>
     <ul>
-        <li>
-            <div class="edit-delete">
-                <span class="edit-icon"><i class="fa fa-edit"></i></span>
-                <span class="delete-icon"><i class="fa fa-trash-o"></i></span>
-            </div>
-            <input class="to-do-text" value="To-Do-List-1">
-            <div class="done">
-                <i class="fa fa-check-circle"></i>
-            </div>
-        </li>
-        <li>
-            <div class="edit-delete">
-                <span class="edit-icon"><i class="fa fa-edit"></i></span>
-                <span class="delete-icon"><i class="fa fa-trash-o"></i></span>
-            </div>
-            <input class="to-do-text" value="To-Do-List-1" disabled>
-            <div class="done">
-                <i class="fa fa-check-circle"></i>
-            </div>
-        </li>
-        <li>
-            <div class="edit-delete">
-                <span class="edit-icon"><i class="fa fa-edit"></i></span>
-                <span class="delete-icon"><i class="fa fa-trash-o"></i></span>
-            </div>
-            <input class="to-do-text" value="To-Do-List-1" disabled>
-            <div class="done">
-                <i class="fa fa-check-circle"></i>
-            </div>
-        </li>
     </ul>
 </div>
 </body>
